--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 9be8090d-bbdc-4e75-90da-044f04dd9c31}
-  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-445.4KB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-380.6KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 30fd975c-5bbb-4502-96f1-b01cec401de1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 🇺🇸 美国-307.9KB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-356.7KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.87MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-267.0KB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
   - {name: 塞浦路斯-411.7KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇰🇷 韩国-1.55MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇮🇹 意大利-1.38MB/s(Youtube:不良林), server: id-lb.sshkit.org, port: 443, type: vmess, uuid: 6fea1649-425b-4092-bf53-29792152c925, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /sshkit/hajjana/62bc48cd97ee1/, ws-headers: {Host: id-lb.sshkit.org}}
+  - {name: 🇬🇧 英国-2.11MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
+  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.0KB/s(Youtube:不良林)
       - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.0KB/s(Youtube:不良林)
       - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.0KB/s(Youtube:不良林)
       - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.0KB/s(Youtube:不良林)
       - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.0KB/s(Youtube:不良林)
       - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.0KB/s(Youtube:不良林)
       - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.0KB/s(Youtube:不良林)
       - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.55MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-1.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
