--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 9be8090d-bbdc-4e75-90da-044f04dd9c31}
-  - {name: 🇬🇧 英国-2.11MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 45.88.148.234, port: 38443, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-362.5KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-356.7KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
   - {name: 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 塞浦路斯-411.7KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.37MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-1.36MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.98MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.88MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-362.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-362.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-362.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-362.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-362.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-362.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-362.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
